AICP French Translations (update) : packages_apps_AicpExtras
Change-Id: I31881f4a708c8d821b638f267f9099336fc1bdbc

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -759,9 +759,12 @@
 
     <!-- Hide Lockscreen clock & date -->
     <string name="hide_lockscreen_items_title">Éléments affichés</string>
-    <string name="hide_lockscreen_clock_title">Afficher l\'horloge sur l\'écran de déverrouillage</string>
-    <string name="hide_lockscreen_date_title">Afficher la date sur l\'écran de déverrouillage</string>
-    <string name="hide_lockscreen_alarm_title">Afficher l\'alarme sur l\'écran de déverrouillage</string>
+    <string name="hide_lockscreen_clock_title">Horloge</string>
+    <string name="hide_lockscreen_clock_summary">Afficher l\'horloge sur l\'écran de déverrouillage</string>
+    <string name="hide_lockscreen_date_title">Date</string>
+    <string name="hide_lockscreen_date_summary">Afficher la date sur l\'écran de déverrouillage</string>
+    <string name="hide_lockscreen_alarm_title">Alarme</string>
+    <string name="hide_lockscreen_alarm_summary">Afficher l\'alarme sur l\'écran de déverrouillage</string>
 
     <!-- Status bar header font style -->
     <string name="status_bar_header_font_style_title">Style de la police de l\'en-tête</string>
