AE: Updated RU translations by Sergey Samsonenko
Change-Id: I2db9d875e8cabbcb480d7152235d10f55c467cf5

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">AICP настройки</string>
+    <string name="app_name">Настройки AICP </string>
 
     <string name="navigation_drawer_open">Открыть панель навигации</string>
     <string name="navigation_drawer_close">Закрыть панель навигации</string>
@@ -782,5 +782,10 @@
     <string name="lockscreen_colors_reset_title">Сброс цветов экрана блокировки</string>
     <string name="lockscreen_colors_reset_message">Вы уверены, что хотите сбросить эти цвета по умолчанию?</string>
     <string name="yes">Да</string>
+
+    <!-- Header image shadow -->
+    <string name="status_bar_custom_header_shadow_title">Затемнение изображение заголовка</string>
+    <string name="status_bar_custom_header_shadow_summary">Для лучшей видимости на ярких изображениях</string>
+    <string name="unit_percent">\u0025</string>
 
 </resources>
