--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -262,8 +262,8 @@
     <string name="recents_fullscreen_summary_disabled">Недавно запущеные во весь выключено</string>
     <string name="recents_full_screen_clock_title">Показывать часы</string>
     <string name="recents_full_screen_clock_summary">Показывать часы во время полноэкранного режима</string>
-    <string name="recents_full_screen_date_title">Показывать дату во время полноэкранного режима</string>
-    <string name="recents_full_screen_date_summary">Показывать дату</string>
+    <string name="recents_full_screen_date_title">Показывать дату</string>
+    <string name="recents_full_screen_date_summary">Показывать дату во время полноэкранного режима</string>
 
     <!-- Weather settings -->
     <string name="weather_lockscreen_category">Погода на экране блокировки</string>
@@ -743,7 +743,7 @@
 
     <!-- Lockscreen Torch -->
     <string name="keyguard_torch_title">Фонарик на экране блокировки</string>
-    <string name="keyguard_torch_summary">Долгое нажатие на значок блокировки включает фонарик</string>
+    <string name="keyguard_torch_summary">Включение фонарика в заблокированом состоянии</string>
 
     <!-- Breathing Notifications -->
     <string name="breathing_notifications_category">\"Живые\" уведомления</string>
