HeadsUp: add timeout option (2/2)
Forward ported to marshmallow/nougat By: @BeansTown106

removed the none option as we now have a headsup minimum time of 2seconds
added 5sec option as that is the new default in marshmallow

Change-Id: I0afa29096947777d818efe8641c68411b899de79

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -465,5 +465,14 @@
     <string name="headsup_settings_summary">To allow applications to display interactive notifications in a pop-up window on your screen, enable Peeking notifications.</string>
     <string name="summary_heads_up_enabled">Peeking notifications are enabled</string>
     <string name="summary_heads_up_disabled">Peeking notifications are disabled</string>
-    <string name="heads_up_disabled_notice">To allow applications to display interactive notifications in a pop-up window on your screen, enable Peeking notifications.</string>
+
+    <!-- Heads up timeout -->
+    <string name="heads_up_time_out_title">Time out</string>
+    <string name="heads_up_time_out_summary">Peeking notifications will show for <xliff:g id="number">%d</xliff:g> seconds</string>
+    <string name="heads_up_time_out_2sec">2 seconds</string>
+    <string name="heads_up_time_out_4sec">4 seconds</string>
+    <string name="heads_up_time_out_5sec">5 seconds</string>
+    <string name="heads_up_time_out_6sec">6 seconds</string>
+    <string name="heads_up_time_out_8sec">8 seconds</string>
+    <string name="heads_up_time_out_10sec">10 seconds</string>
 </resources>
