AE: update Chinese translations
Thanks to 王伟健@G+

Change-Id: Ia22ca3763a38282ddf490d5863e0f8afd979451b

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -578,8 +578,8 @@
     <string name="wakelock_blocker_title">Wakelock 唤醒拦截器</string>
     <string name="block_on_secure_keyguard_title">禁用锁屏时的快速设置</string>
     <string name="block_on_secure_keyguard_summary">Disables quick settings in the keyguard for a secure lock only</string>
-    <string name="qs_transparent_shade">下拉栏上部分透明度</string>
-    <string name="qs_transparent_header">下拉栏开关栏透明度</string>
+    <string name="qs_transparent_shade">下拉栏开关栏透明度</string>
+    <string name="qs_transparent_header">下拉栏上部分透明度</string>
     <string name="volume_dialog_transparency">音量栏透明度</string>
     <string name="power_menu_transparency">电源菜单透明度</string>
     <string name="power_menu_dialog_dim">关机重启界面透明度</string>
