AICP French Translations (update) : packages_apps_AicpExtras
Change-Id: Ia2aa82892464c68a73ef881ed4b76ea4e1def664

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -787,4 +787,9 @@
     <string name="lockscreen_colors_reset_message">Réinitialiser les couleurs de l\'écran de déverrouillage ?</string>
     <string name="yes">OUI</string>
 
+    <!-- Header image shadow -->
+    <string name="status_bar_custom_header_shadow_title">Ombre</string>
+    <string name="status_bar_custom_header_shadow_summary">Appliquer une ombre sur l\'image d\'arrière-plan de l\'en-tête contextuel, pour une meilleure visibilité des images lumineuses</string>
+    <string name="unit_percent">\u0025</string>
+
 </resources>
