--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -821,4 +821,7 @@
     <string name="status_bar_custom_header_shadow_summary">For better visibility on bright images</string>
     <string name="unit_percent">\u0025</string>
 
+    <!-- AdAway -->
+    <string name="adaway_settings_title">AdAway</string>
+
 </resources>
