Start AE regardless of having root or not
Kill TABS and whitespaces

Change-Id: Iadc23586a2fe1a03a161e47dfde2a565c4b8134d

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -550,6 +550,7 @@
 
     <!-- SU -->
     <string name="cannot_get_su">Cannot get superuser access, exiting.</string>
+    <string name="cannot_get_su_start">Cannot get superuser access.</string>
 
     <!-- Aicp logcat -->
     <string name="logcat_title">Logcat</string>
