Italian translation updates
Some Italian translation updates

--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -684,8 +684,8 @@
     <string name="headset_connect_player_summary">Avvia l\'applicazione musicale di default quando le cuffie sono connesse.</string>
 
     <!-- Recent panel -->
-    <string name="recent_panel_category">Pannello applicazioni recenti snello</string>
-    <string name="use_slim_recents_title">Recenti snello</string>
+    <string name="recent_panel_category">Pannello applicazioni recenti sottile</string>
+    <string name="use_slim_recents_title">Pannello Recenti sottile</string>
     <string name="show_running_tasks_title">Mostra solo le applicazioni in esecuzione</string>
     <string name="recents_max_apps_title">Massimo numero di applicazioni ammesso</string>
     <string name="recent_panel_scale_title">Dimensioni</string>
