Updatate DE and ES translations by Ralf Luther
Change-Id: Id546f05375f9e28a5a0fdb92b6860f6c343966be

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -417,7 +417,7 @@
 
     <!-- Circle app bar -->
     <string name="category_app_circle_bar_title">App-Kreisleiste</string>
-    <string name="app_circle_bar_title">Ringförmige Startleiste für Apps</string>
+    <string name="app_circle_bar_title">App-Kreisleiste</string>
     <string name="app_circle_bar_summary">Zeige den Ring bei Berührung des rechten Displayrandes</string>
     <string name="app_circle_bar_included_apps_title">Enthaltene Apps</string>
     <string name="app_circle_bar_included_apps_summary">Angezeigte Apps in der Ringleiste</string>
@@ -444,10 +444,6 @@
     <string name="omniswitch_start_settings_summary">Öffnet die Einstellungen von OmniSwitch</string>
     <string name="omniswitch_first_time_title">Information</string>
     <string name="omniswitch_first_time_message">Stellen Sie sicher, dass OmniSwitch aktiviert ist. Sie können dies mit Hilfe der \"Einstellungen\" unten tun.</string>
-
-    <!-- Double Tap Navbar to Sleep -->
-    <string name="double_tap_sleep_nav_bar_title">DT2S auf Navigationsleiste</string>
-    <string name="double_tap_sleep_nav_bar_summary">Zweimal auf die Navigationsleiste tippen, um das Gerät in den Ruhezustand zu versetzen</string>
 
     <!-- Double tap to sleep on lockscreen -->
     <string name="double_tap_sleep_anywhere_title">DT2S auf Sperrbildschirm</string>
@@ -550,6 +546,7 @@
 
     <!-- SU -->
     <string name="cannot_get_su">Keinen Superuser-Zugriff erhalten, beende.</string>
+    <string name="cannot_get_su_start">Kann keinen Superuser-Zugriff erhalten.</string>
 
     <!-- Aicp logcat -->
     <string name="logcat_title">Logcat</string>
