AE: Keyguard Charging Current Switch [2/2]
Signed-off-by: Varun Date <date.varun123@gmail.com>

Change-Id: I97938de64ad83e4861fdad5a84e98a61a3fca955

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -825,4 +825,8 @@
     <string name="hide_apps_from_recents_title">Hidden Apps</string>
     <string name="hide_apps_from_recents_summary">Pick which apps to exclude from the recents panel.</string>
 
+    <!-- Current on Lockscreen -->
+    <string name="lock_screen_show_current">Charging Current</string>
+    <string name="lock_screen_show_current_summary">Show Charging Current rate on lock screen</string>
+
 </resources>
