AE: Updated DE translations by Ralf Luther
- translated „Hide Apps from recents“
- translated „show Charging Currrent on LS“

Change-Id: Ibd6a65826f1d47a5deded58f4a28fe894efff246

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -821,4 +821,12 @@
     <!-- AdAway -->
     <string name="adaway_settings_title">AdAway (Werbeblocker)</string>
 
+    <!-- Hide Apps from Recents -->
+    <string name="hide_apps_from_recents_title">Versteckte Apps</string>
+    <string name="hide_apps_from_recents_summary">Auswählen, welche Apps im Verlauf nicht angezeigt werden.</string>
+
+    <!-- Current on Lockscreen -->
+    <string name="lock_screen_show_current">Aufladungsstärke</string>
+    <string name="lock_screen_show_current_summary">Zeigt die aktuelle Stromstärke beim Ladevorgang auf dem Sperrbildschirm an.</string>
+
 </resources>
