AE: update italian translations
thanks to Francesco Teodori

Change-Id: I2128fc0dd65eb6929a9f7e12729dcdafadd37f6e

--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -3,12 +3,12 @@
     <string name="navigation_drawer_close">Chiudi pannello di navigazione</string>
 
     <string name="action_settings">Impostazioni</string>
-    <string name="first_layout_title">Spazio riservato per porcherie varie\ne ragazze svestite!!!</string>
+    <string name="first_layout_title">Spazio riservato per bizzarrie varie\ne ragazze svestite!!!</string>
     <string name="second_layout_title">Secondo layout</string>
     <string name="third_layout_title">Terzo layout</string>
     <string name="aicp_extras_title">AICP Extras</string>
     <string name="pun_title">\"One rom to rule them all\"</string>
-    <string name="various_shit_title">Porcherie varie</string>
+    <string name="various_shit_title">Bizzarrie varie</string>
     <string name="about_title">Informazioni</string>
     <string name="other_title">Altro</string>
     <string name="g_community">G+ community</string>
@@ -18,7 +18,7 @@
     <string name="welcome_title">BENVENUTO\nnel mondo reale!!!</string>
     <string name="logo">logo</string>
     <string name="display_animations_title">Display e animazioni</string>
-    <string name="multishit_title">Multeplici Porcherie</string>
+    <string name="multishit_title">Multeplici Bizzarrie</string>
     <string name="transparency_porn_title">Transparenze</string>
     <string name="notificaitons_title">Pannello Notifiche</string>
     <string name="statubar_title">Barra di stato</string>
@@ -42,8 +42,8 @@
     <string name="switch_off_text">Off</string>
 
     <!-- Permissions -->
-    <string name="storage_permission_granted">Permesso Garantito, ora puoi scrivere sulla memoria di massa.</string>
-    <string name="storage_permission_not_granted">Permesso Negato, non puoi scrivere sulla memoria di massa.</string>
+    <string name="storage_permission_granted">Permesso Garantito, ora puoi scrivere sulla memoria esterna.</string>
+    <string name="storage_permission_not_granted">Permesso Negato, non puoi scrivere sulla memoria esterna.</string>
 
     <!-- Recents panel -->
     <string name="recents_panel_title">Pannello Recenti</string>
@@ -716,6 +716,36 @@
 
     <string name="brightness_icon_title">Icona luminosità </string>
     <string name="brightness_icon_summary">Mostra l\'icona di luminosità alla sinistra del cursore di luminosità per regolare la luminosità automatica</string>
+
+    <!-- App sidebar -->
+    <string name="app_sidebar_title">Barra Laterale Applicazioni</string>
+    <string name="app_sidebar_enable_title">Abilita barra laterale applicazioni</string>
+    <string name="app_sidebar_enable_summaryOn">Barra laterale applicazioni abilitata</string>
+    <string name="app_sidebar_enable_summaryOff">Barra laterale applicazioni disabilitata</string>
+    <string name="app_sidebar_setup_items_title">Imposta contenuti barra laterale</string>
+    <string name="app_sidebar_setup_items_summary">Aggiungi, rimuovi, e posiziona elementi sulla barra laterale</string>
+    <string name="app_sidebar_transparency_title">Trasparenza barra laterale</string>
+    <string name="app_sidebar_transparency_summary">Imposta il livello di trasparenza della barra laterale</string>
+    <string name="app_sidebar_position_title">Posizione Barra Laterale</string>
+    <string name="app_sidebar_position_summary">Posiziona la barra laterale sul lato destro o sinistro dello schermo</string>
+    <string name="app_sidebar_position_left">A sinistra</string>
+    <string name="app_sidebar_position_right">A destra</string>
+    <string name="app_sidebar_hide_labels_title">Nascondi le etichette delle icone</string>
+    <string name="app_sidebar_hide_labels_summary">Masconde le etichette delle icone della barra laterale</string>
+    <string name="tab_category">Visibilità Tab</string>
+    <string name="use_tab_title">Visualizza tab</string>
+    <string name="use_tab_summary">Dispone una tab visibile sul lato sul quale appare la barra laterale quando toccato.</string>
+    <string name="tab_position_title">Posizione della tab</string>
+    <string name="tab_position_summary">Mostra la tab in cima, al centro, o in fondo al bordo dello schermo.</string>
+    <string name="tab_size_title">Dimensioni Tab</string>
+    <string name="tab_size_summary">Cambia le dimensioni della tab.</string>
+    <string name="trigger_category">Regione Interruttore</string>
+    <string name="trigger_width_title">Ampiezza interruttore</string>
+    <string name="trigger_width_summary">Imposta l\'ampizza dell\'area interruttore</string>
+    <string name="trigger_top_title">Posizione Interruttore</string>
+    <string name="trigger_top_summary">Imposta la posizione verticale dell\'area interruttore</string>
+    <string name="trigger_bottom_title">Altezza Interruttore</string>
+    <string name="trigger_bottom_summary">Imposta l'altezza dell\'area interruttore</string>
 
     <!-- Wakelock blocker -->
     <string name="wakelock_blocker_title">Wakelock Blocker</string>
